mealie/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  replicas: 1
  revisionHistoryLimit: 2
  strategy: { type: Recreate }

  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - name: mealie
          image: mealie
          ports:
            - { name: http, containerPort: 9000 }
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            limits: { cpu: 1000m, memory: 512Mi }

      volumes:
        - name: data
          persistentVolumeClaim: { claimName: mealie-data-pvc }
