mealie/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  replicas: 1

  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v1.12.0
          ports:
            - containerPort: 9000
              name: http
          volumeMounts:
            - name: storage
              mountPath: /app/data
          resources:
            limits:
              cpu: 500m
              memory: 512Mi

  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: [ReadWriteOncePod]
        storageClassName: local-path-fast
        resources:
          requests:
            storage: 1Gi
