mealie/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mealie
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: http
